; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/ui/extr_video.c_VideoSetAllColorsToBlack.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/ui/extr_video.c_VideoSetAllColorsToBlack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @VideoSetAllColorsToBlack(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %5 = call i32 (...) @MachVideoSync()
  store i64 0, i64* %4, align 8
  br label %6

6:                                                ; preds = %13, %1
  %7 = load i64, i64* %4, align 8
  %8 = load i64, i64* %3, align 8
  %9 = icmp slt i64 %7, %8
  br i1 %9, label %10, label %16

10:                                               ; preds = %6
  %11 = load i64, i64* %4, align 8
  %12 = call i32 @MachVideoSetPaletteColor(i64 %11, i32 0, i32 0, i32 0)
  br label %13

13:                                               ; preds = %10
  %14 = load i64, i64* %4, align 8
  %15 = add nsw i64 %14, 1
  store i64 %15, i64* %4, align 8
  br label %6

16:                                               ; preds = %6
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @MachVideoSync(...) #1

declare dso_local i32 @MachVideoSetPaletteColor(i64, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
